--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>BUA Schedule → Google Calendar Importer</title>
+    <meta name="description" content="Quickly and easily import your BUA classes into Google Calendar with this tool." />
+    <meta name="author" content="Maxwell Yu" />
   </head>
   <body>
     <div id="app"></div>
