Update meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>BUA Schedule → Google Calendar Importer</title>
-    <meta name="description" content="Quickly and easily import your BUA classes into Google Calendar with this tool." />
+    <meta name="description" content="Quickly and easily import your BUA classes into Google Calendar with this tool. Simply drag and drop your PDF schedule to get started!" />
     <meta name="author" content="Maxwell Yu" />
   </head>
   <body>
