--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>BUA Schedule → Google Calendar Importer</title>
     <meta name="description" content="Quickly and easily import your BUA classes into Google Calendar with this tool. Simply drag and drop your PDF schedule to get started!" />
     <meta name="author" content="Maxwell Yu" />
-    <meta property="og:image" content="%BASE_URL%/cover.png" />
+    <meta property="og:image" content="/cover.png" />
     <meta name="theme-color" content="#FF0000">
 
-    <link rel="canonical" href="%BASE_URL%" />
+    <link rel="canonical" href="/" />
   </head>
   <body>
     <div id="app"></div>
